--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -5,6 +5,17 @@
 .verticalCentering{position:absolute;top:0;bottom:0;margin:auto;}
 .filter.karl-wikitoc-header{margin-bottom:0;padding-bottom:0;height:0;}
 .karl-wikitoc-gridwrapper{width:100%;height:500px;}.karl-wikitoc-gridwrapper .karl-wikitoc-widthconstrainer{width:100%;height:500px;}
+.karl-wikitoc-gridwrapper .karl-wikitoc-inspector{width:0px;height:500px;position:absolute;top:122px;right:0;z-index:1111;overflow:hidden;color:#222222;background-color:#d3d3d3;font-weight:bold;font-size:11px;line-height:11px;}.karl-wikitoc-gridwrapper .karl-wikitoc-inspector fieldset{border:2px groove #f0f0f0;margin:0;}.karl-wikitoc-gridwrapper .karl-wikitoc-inspector fieldset.karl-wikitoc-grouping,.karl-wikitoc-gridwrapper .karl-wikitoc-inspector fieldset.karl-wikitoc-columnselectors{margin-top:20px;}
+.karl-wikitoc-gridwrapper .karl-wikitoc-inspector fieldset legend{color:#222222;padding:0 2px;margin:0 0 0 11px;width:auto;}
+.karl-wikitoc-gridwrapper .karl-wikitoc-inspector fieldset>div{padding:8px;}
+.karl-wikitoc-gridwrapper .karl-wikitoc-inspector fieldset p{margin:0 0 10px 2px;font-weight:normal;font-style:italic;}
+.karl-wikitoc-gridwrapper .karl-wikitoc-inspector fieldset label{font-weight:bold;display:inline-block;}
+.karl-wikitoc-gridwrapper .karl-wikitoc-inspector fieldset input[type="checkbox"]{margin:3px;border:2px;}
+.karl-wikitoc-gridwrapper .karl-wikitoc-inspector .karl-wikitoc-icon-search{float:left;position:relative;margin-top:4px;}
+.karl-wikitoc-gridwrapper .karl-wikitoc-inspector .karl-wikitoc-input-livesearch{width:122px;margin-left:-16px;padding-left:16px;}
+.karl-wikitoc-gridwrapper .karl-wikitoc-inspector .karl-wikitoc-items{padding:10px;display:inline-block;float:left;}
+.karl-wikitoc-gridwrapper .karl-wikitoc-inspector-wrapper{width:190px;}
+.karl-wikitoc-gridwrapper .karl-wikitoc-inspector-wrapper2{padding:10px;padding-top:40px;}
 .karl-wikitoc-grid{height:500px;width:100%;position:relative;width:100%;position:relative;}.karl-wikitoc-grid .slick-viewport{background:#e3d2ba;}
 .karl-wikitoc-grid .grid-canvas{}.karl-wikitoc-grid .grid-canvas .slick-row{border:0 none;position:absolute;}
 .karl-wikitoc-grid .grid-canvas .slick-cell,.karl-wikitoc-grid .grid-canvas .slick-headerrow-column{border-top:1px solid #FFFFFF;border-bottom:0;border-left:0;border-right:0;}
@@ -55,17 +66,6 @@ body .karl-wikitoc-grid .slick-header-columns .slick-header-column.ui-state-defa
 .karl-wikitoc-grid .slick-header-columns .slick-header-column .slick-sort-indicator-asc{background-image:none;display:inline-block;padding:0 1.3em 0 .7em;margin:0;position:relative;line-height:1.5em;color:#ffffff;vertical-align:middle;padding:0 0 0 10px;}.karl-wikitoc-grid .slick-header-columns .slick-header-column .slick-sort-indicator-asc:before{border-bottom:none;border-left:0.266666667em solid transparent;border-right:0.266666667em solid transparent;border-top:0.266666667em solid #ffffff;content:"";display:block;width:0;height:0;*line-height:0;position:absolute;z-index:2;top:50%;margin-top:-0.1em;right:.266666667em;*line-height:0;}
 .karl-wikitoc-grid .slick-header-columns .slick-header-column .slick-sort-indicator-asc:before{border-top:0;border-bottom:.266666667em solid #fff;}
 .karl-wikitoc-grid .slick-header-columns .slick-header-column .slick-sort-indicator-desc{background-image:none;display:inline-block;padding:0 1.3em 0 .7em;margin:0;position:relative;line-height:1.5em;color:#ffffff;vertical-align:middle;padding:0 0 0 10px;}.karl-wikitoc-grid .slick-header-columns .slick-header-column .slick-sort-indicator-desc:before{border-bottom:none;border-left:0.266666667em solid transparent;border-right:0.266666667em solid transparent;border-top:0.266666667em solid #ffffff;content:"";display:block;width:0;height:0;*line-height:0;position:absolute;z-index:2;top:50%;margin-top:-0.1em;right:.266666667em;*line-height:0;}
-.karl-wikitoc-grid .karl-wikitoc-inspector{width:0px;height:500px;position:absolute;top:0;right:0;z-index:1111;overflow:hidden;color:#222222;background-color:#d3d3d3;font-weight:bold;font-size:11px;line-height:11px;}.karl-wikitoc-grid .karl-wikitoc-inspector fieldset{border:2px groove #f0f0f0;margin:0;}.karl-wikitoc-grid .karl-wikitoc-inspector fieldset.karl-wikitoc-grouping,.karl-wikitoc-grid .karl-wikitoc-inspector fieldset.karl-wikitoc-columnselectors{margin-top:20px;}
-.karl-wikitoc-grid .karl-wikitoc-inspector fieldset legend{color:#222222;padding:0 2px;margin:0 0 0 11px;width:auto;}
-.karl-wikitoc-grid .karl-wikitoc-inspector fieldset>div{padding:8px;}
-.karl-wikitoc-grid .karl-wikitoc-inspector fieldset p{margin:0 0 10px 2px;font-weight:normal;font-style:italic;}
-.karl-wikitoc-grid .karl-wikitoc-inspector fieldset label{font-weight:bold;display:inline-block;}
-.karl-wikitoc-grid .karl-wikitoc-inspector fieldset input[type="checkbox"]{margin:3px;border:2px;}
-.karl-wikitoc-grid .karl-wikitoc-inspector-wrapper{width:190px;}
-.karl-wikitoc-grid .karl-wikitoc-inspector-wrapper2{padding:10px;padding-top:40px;}
-.karl-wikitoc-grid .karl-wikitoc-icon-search{float:left;position:relative;margin-top:4px;}
-.karl-wikitoc-grid .karl-wikitoc-input-livesearch{width:122px;margin-left:-16px;padding-left:16px;}
-.karl-wikitoc-grid .karl-wikitoc-items{padding:10px;display:inline-block;float:left;}
 .karl-wikitoc-grid .slick-group .slick-cell{background:#d3d3d3 !important;}
 .karl-wikitoc-grid .slick-group-toggle{width:9px;height:9px;margin-right:5px;}
 .karl-wikitoc-grid .slick-group-toggle.expanded{background:url(images/collapse.gif) no-repeat center center;}
