quick fix for chatter pushdown timeago

--- a/karl/ux2/microtemplates/chatter.mustache
+++ b/karl/ux2/microtemplates/chatter.mustache
@@ -56,4 +56,11 @@
         {{/streams}}
 
     </div>
+    <script language="javascript" type="text/javascript">
+      //<![CDATA[
+      $(document).ready(function() {
+        $(".panel-footer abbr.timeago").timeago();
+      });
+      //]]>
+    </script>
 </div>
