reworked chatter post markup and style, hooked up pushdown plugin to listen for render event

--- a/karl/views/static/ux2/css/elements/pushdowns.less
+++ b/karl/views/static/ux2/css/elements/pushdowns.less
@@ -51,6 +51,10 @@
         left: .73em;
         top: .73em;
     }
+    .messagewrapper {
+        height: 5.4em;
+        overflow: hidden;
+    }
     .messagetext {
         display: block;
         line-height: normal;
@@ -62,10 +66,14 @@
     a.messagetext:hover {
         color: #222;
     }
-    .panel-footer {
+    .panel-header {
         position: absolute;
         top: .5em;
         right: .73em;
+    }
+    .panel-footer {
+        display: block;
+        font-size: 0.8em;
     }
     .timestamp {
         float: right;
