--- a/karl/ux2/microtemplates/chatter.mustache
+++ b/karl/ux2/microtemplates/chatter.mustache
@@ -1,66 +1,64 @@
 <div id="chatter-panel">
-    <div class="pushdownContent clearfix">
-        <div id="on-your-mind" class="panel">
-          <h3>On your mind</h3>
-          <form class="form-stacked" action="{{chatter_url}}/add_chatter.html" method="POST">
-            <div class="control-group clearfix">
-              <div class="controls">
-                <textarea id="chatter-panel-text" name="text"></textarea>
-                <p class="help-block tips">Tips: Use @username, #tag, and #this for this page</p>
-              </div>
-              <div class="actions">
-                <div class="btn-group">
-                  <button id="speak" type="submit" class="btn btn-small">Speak</button>
-                </div>
-              </div>
+  <div class="pushdownContent clearfix">
+    <div id="on-your-mind" class="panel">
+      <h3>On your mind</h3>
+      <form class="form-stacked" action="{{chatter_url}}/add_chatter.html" method="POST">
+        <div class="control-group clearfix">
+          <div class="controls">
+            <textarea id="chatter-panel-text" name="text"></textarea>
+            <p class="help-block tips">Tips: Use @username, #tag, and #this for this page</p>
+          </div>
+          <div class="actions">
+            <div class="btn-group">
+              <button id="speak" type="submit" class="btn btn-small">Speak</button>
             </div>
-          </form>
-            <div class="houstonWeHaveAProblem notification info">
-                <strong>Something went wrong.</strong>
-                <p>We could not update the messages for you. But don't you
-                worry, we'll try again as soon as possible.</p>
-            </div>
-            <a id="goto-chatter" class="btn btn-small btn-primary goto" href="{{chatter_url}}" title="Go to Chatter">Go to Chatter</a>
+          </div>
         </div>
-        {{#streams}}
-        <div id="{{class}}" class="panel">
-            <h3>{{title}}<span class="updating">Updating&hellip;</span></h3>
-            {{#items}}
-            <div class="panel-item clearfix {{#new}}newMessage{{/new}}">
-                <div class="panel-item-content">
-                    <a href="{{author_profile_url}}">
-                        <img alt="{{author}}" src="{{image_url}}"
-                             class="avatar" />
-                        <strong class="fullname">{{author}}</strong>
-                    </a>
-                    <div>
-                        <a href="{{message_url}}" class="messagetext">
-                            {{text}}
-                        </a>
-                    </div>
-                </div>
-                <div class="panel-footer clearfix">
-                    <abbr class="timeago" title="{{info}}">{{info}}</abbr>
-                </div>
-            </div>
-            {{/items}}
-            <a href="{{has_more_news_url}}" class="thereIsMore" title="Go to Chatter">
-                {{#has_more_news}}
-                    <span class="newMessages">{{has_more_news}} more new items</span>
-                {{/has_more_news}}
-                {{^has_more_news}}
-                    <span class="noNewMessages">&hellip;</span>
-                {{/has_more_news}}
-            </a>
-        </div>
-        {{/streams}}
-
+      </form>
+      <div class="houstonWeHaveAProblem notification info">
+        <strong>Something went wrong.</strong>
+        <p>We could not update the messages for you. But don't you
+           worry, we'll try again as soon as possible.</p>
+      </div>
+      <a id="goto-chatter" class="btn btn-small btn-primary goto" href="{{chatter_url}}" title="Go to Chatter">Go to Chatter</a>
     </div>
-    <script language="javascript" type="text/javascript">
-      //<![CDATA[
-      $(document).ready(function() {
-        $(".panel-footer abbr.timeago").timeago();
-      });
-      //]]>
-    </script>
+    {{#streams}}
+    <div id="{{class}}" class="panel">
+      <h3>{{title}}<span class="updating">Updating&hellip;</span></h3>
+      {{#items}}
+      <div class="panel-item clearfix {{#new}}newMessage{{/new}}">
+        <div class="panel-header">
+          <span class="timeago" title="{{info}}">{{info}}</span>
+        </div>
+        <div class="panel-item-content">
+          <a href="{{author_profile_url}}">
+            <img alt="{{author}}" src="{{image_url}}" class="avatar" />
+            <span class="fullname">{{author}}</span>
+          </a>
+          <div class="messagewrapper">
+            <div class="messagetext">
+              {{text}}
+            </div>
+          </div>
+        </div>
+        <div class="panel-footer">
+          <div class="view-options">
+            <a href="#"><i class="icon-plus"></i>View more</a> |
+            <a href="{{message_url}}"><i class="icon-eye-open"></i>View</a>
+          </div>
+        </div>
+      </div>
+      {{/items}}
+      <a href="{{has_more_news_url}}" class="thereIsMore" title="Go to Chatter">
+        {{#has_more_news}}
+        <span class="newMessages">{{has_more_news}} more new items</span>
+        {{/has_more_news}}
+        {{^has_more_news}}
+        <span class="noNewMessages">&hellip;</span>
+        {{/has_more_news}}
+      </a>
+    </div>
+    {{/streams}}
+
+  </div>
 </div>
