added view more/less in chatter messages

--- a/karl/ux2/microtemplates/chatter.mustache
+++ b/karl/ux2/microtemplates/chatter.mustache
@@ -43,8 +43,9 @@
         </div>
         <div class="panel-footer">
           <div class="view-options">
-            <a href="#"><i class="icon-plus"></i>View more</a> |
-            <a href="{{message_url}}"><i class="icon-eye-open"></i>View</a>
+            <a class="view-more" href="#"><i class="icon-plus"></i>View more</a>
+            <a class="view-less" href="#"><i class="icon-minus"></i>View less</a>
+            <a class="view" href="{{message_url}}"><i class="icon-eye-open"></i>View</a>
           </div>
         </div>
       </div>
