--- a/karl/views/static/ux2/css/elements/pushdowns.less
+++ b/karl/views/static/ux2/css/elements/pushdowns.less
@@ -55,6 +55,10 @@
         height: 5.4em;
         overflow: hidden;
     }
+    .messagewrapper-view-all {
+        height: auto;
+        overflow: visible;
+    }
     .messagetext {
         display: block;
         line-height: normal;
