--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -571,6 +571,7 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 .pushdownContent h3{margin-top:0;font-size:1.18em;font-weight:bold;text-shadow:0 1px 0 rgba(255, 255, 255, 0.3);position:relative;}
 .pushdownContent .avatar{position:absolute;left:.73em;top:.73em;}
 .pushdownContent .messagewrapper{height:5.4em;overflow:hidden;}
+.pushdownContent .messagewrapper-view-all{height:auto;overflow:visible;}
 .pushdownContent .messagetext{display:block;line-height:normal;font-size:0.9em;}
 .pushdownContent a.messagetext{color:#555;}
 .pushdownContent a.messagetext:hover{color:#222;}
@@ -660,8 +661,9 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 .panel-item-content .repost-box,.panel-item-content .reply-box{margin-top:10px;padding:10px;background:#eadecc;-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;display:none;}.panel-item-content .repost-box form,.panel-item-content .reply-box form{padding:0;margin:0;}
 .panel-item-content .repost-box .control-group,.panel-item-content .reply-box .control-group{padding-bottom:0;}
 .panel-item-content .repost-box{text-align:center;}
-.panel-footer .view-options{color:#000000;text-align:right;}.panel-footer .view-options a{color:#000000;display:inline-block;padding:0 5px;text-align:center;vertical-align:middle;}.panel-footer .view-options a:hover{text-decoration:underline;}
+.panel-footer .view-options{float:right;padding:2px;margin-top:5px;color:#000000;text-align:right;background:#eadecc;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}.panel-footer .view-options a{color:#000000;display:inline-block;padding:0 5px;text-align:center;vertical-align:middle;}.panel-footer .view-options a:hover{text-decoration:underline;}
 .panel-footer .view-options a i{padding-right:5px;}
+.panel-footer .view-options .view-more,.panel-footer .view-options .view-less{display:none;}
 #radar-panel{position:relative;overflow:hidden;padding:.889em;background-color:#aaaaaa;background-image:url('../img/vertical_stripes.png');background-position:top left;background-repeat:repeat;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;}#radar-panel:before{content:"";font-size:0;position:absolute;top:0;left:-25%;width:150%;height:100%;-webkit-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);-moz-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);pointer-events:none;}
 #radar-panel .thereIsMore{text-shadow:0 1px 0 rgba(255, 255, 255, 0.4);}
 #radar-panel .help-block{color:#ccc;font-size:.75em;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;}
