--- a/karl/ux2/microtemplates/chatter.mustache
+++ b/karl/ux2/microtemplates/chatter.mustache
@@ -24,7 +24,11 @@
     </div>
     {{#streams}}
     <div id="{{class}}" class="panel">
-      <h3>{{title}}<span class="updating">Updating&hellip;</span></h3>
+      <h3>{{title}}<span class="updating">Updating&hellip;</span>
+      <a href="{{has_more_news_url}}" class="view-all" title="Go to Chatter">
+        View all {{#has_more_news}}({{has_more_news}} more new items){{/has_more_news}}
+      </a>
+      </h3>
       {{#items}}
       <div class="panel-item clearfix {{#new}}newMessage{{/new}}">
         <div class="panel-header">
@@ -50,14 +54,6 @@
         </div>
       </div>
       {{/items}}
-      <a href="{{has_more_news_url}}" class="thereIsMore" title="Go to Chatter">
-        {{#has_more_news}}
-        <span class="newMessages">{{has_more_news}} more new items</span>
-        {{/has_more_news}}
-        {{^has_more_news}}
-        <span class="noNewMessages">&hellip;</span>
-        {{/has_more_news}}
-      </a>
     </div>
     {{/streams}}
 
