--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -590,7 +590,8 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 .pushDownNavigation a:hover{color:#fff;}
 .pushDownNavigation .selected a{color:#fff;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}
 .pushDownNavigation .messageCounter{font-size:.9em;font-weight:normal;margin-left:0.5em;}
-.panel{display:inline;float:left;width:35.41666666666667%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}.panel #sections .messageCounter{float:right;margin:0.6em 1em 0.5em 0.5em;}
+.panel{position:relative;display:inline;float:left;width:35.41666666666667%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}.panel #sections .messageCounter{float:right;margin:0.6em 1em 0.5em 0.5em;}
+.panel .view-all{position:relative;float:right;font-size:0.6em;padding-top:0.7em;font-weight:normal;vertical-align:text-bottom;}.panel .view-all:hover{text-decoration:underline;}
 .panel:first-of-type{display:inline;float:left;width:18.75%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}
 .panel:last-of-type{display:inline;float:left;width:39.58333333333333%;margin-left:1.0416666666666665%;margin-right:1.0416666666666665%;}
 .updating{opacity:0;display:inline-block;font-weight:normal;width:16px;height:16px;margin-left:.5em;text-indent:-999em;overflow:hidden;vertical-align:middle;background:transparent url('../img/loader.gif') 50% 50% no-repeat;}
