gived chatter panel text more space

--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -17,7 +17,8 @@
 		}
 		#chatter-panel-text {
 			width: 95%;
-			height: 70px;
+			height: 285px;
+			font-size: 0.8em;
 		}
 		.help-block {
 			width: 95%;
