changed chatter reply and repost background

--- a/karl/views/static/ux2/css/elements/chatter.less
+++ b/karl/views/static/ux2/css/elements/chatter.less
@@ -160,7 +160,7 @@
 	.repost-box, .reply-box {
 		margin-top: 10px;
 		padding: 10px;
-		background: @bodyBg;
+		background: lighten(#c8c8c8, 10%);
 		.css3_border_radius(.5em);
 		display:none;
 		form {
