initial chatter search implementation and add model code for conversation support

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -181,7 +181,7 @@ form#search-form fieldset {
      background: #fff;
      .css3_border_radius(0.3em);
  } 
-input.search-site-box {
+input.search-site-box, input.search-chatter-box {
     display: block;
     border: none;
     background: transparent;
@@ -198,7 +198,8 @@ input.search-site-box {
     }
 }
 
-form#search-form button.searchButton {
+form#search-form button.searchButton,
+form#chatter-searchbox button.searchButton {
     background: transparent url('../img/search_icon_dark.png') 50% 50% no-repeat;
     border: none;
     width: 35px;
