Beginnings of calendar

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -889,3 +889,8 @@ a.quip-name, a.quip-tag, a.quip-community, a.quip-url {
 small.timeago-date {
     padding-left: 50px;
 }
+
+
+// calendar
+@import "elements/calendar.less";
+
