ux2 calendar: fix footer a bit

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -21,6 +21,9 @@
       font-size: 85%;
     }
     .cal_footer {
+
+      .clearfix();
+
       background-color: #edf1f3;
       border-top: 1px solid #fff;
       padding: 7px 8px;
@@ -80,16 +83,16 @@
       background-color: #f6f8f9;
     }
     .cal_actions .cal_download {
-      background: url("images/cal_icons_download.png") 0 0 no-repeat;
+      background: url("../img/cal_icons_download.png") 0 0 no-repeat;
       margin-right: 8px;
       padding-left: 17px;
     }
     .cal_actions .cal_subscribe {
-      background: url("images/cal_icons_rss.png") 0 0 no-repeat;
+      background: url("../img/cal_icons_rss.png") 0 0 no-repeat;
       padding-left: 18px;
     }
     .cal_actions .cal_print {
-      background: url("images/cal_icons_print.png") 0 0 no-repeat;
+      background: url("../img/cal_icons_print.png") 0 0 no-repeat;
       padding-left: 18px;
     }
 
