--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -15,6 +15,9 @@
       border: none;
     }
     .cal_header {
+
+        .clearfix();
+
       background-color: #edf1f3;
       border-top: 1px solid #dddfe0;
       border-bottom: 1px solid #dddfe0;
@@ -30,13 +33,8 @@
       font-size: 85%;
     }
     .cal_calendars {
-
-
       .clearfix();
-
-      background-color: #edf1f3;
-      border-bottom: 1px solid #dddfe0;
-      border-width: 1px 0;
+      border: 0;
       padding: 5px 9px;
     }
     .cal_choose {
@@ -104,97 +102,6 @@
       margin: 0 0 0 7px;
     }
 
-    .cal_buttons {
-      border-top: 1px solid #fff;
-      border-bottom: 1px solid #fff;
-      background-color: #edf1f3;
-      padding: 10px 9px 7px 9px;
-    }
-    .cal_buttons .cal_nav {
-      float: left;
-    }
-    .cal_buttons .cal_scope {
-      float: right;
-    }
-
-    .cal_buttons .menubar a {
-        background-color: #F6F7F6;
-        border-top: 1px solid #bcc2c7;
-        border-bottom: 1px solid #bcc2c7;
-        color: #3A74A9;
-        font-weight: normal;
-        line-height: 18px;
-        padding-bottom: 2px;
-    }
-    .cal_buttons .menubar a:hover {
-        background-color: #FBFCFB;
-        color: #3A74A9;
-    }
-    .cal_buttons .menubar a:active {
-        background-color: #ebeced;
-        color: #3A74A9;
-    }
-    .cal_buttons .menubar.day-view a.day,
-    .cal_buttons .menubar.week-view a.week,
-    .cal_buttons .menubar.month-view a.month,
-    .cal_buttons .menubar.list-view a.list {
-        background-color: #ebeced;
-        color: #000000;
-        font-weight: bold;
-    }
-    .cal_buttons .menubar .firstItem a {
-        border-left: 1px solid #bcc2c7;
-        border-radius: 5px 0 0 5px;
-        -moz-border-radius: 5px 0 0 5px;
-    }
-    .cal_buttons .menubar .lastItem a {
-        border-right: 1px solid #bcc2c7;
-        border-radius: 0 5px 5px 0;
-        -moz-border-radius: 0 5px 5px 0;
-    }
-    .cal_buttons .menubar li {
-        border-right: 1px solid #bcc2c7;
-    }
-    .cal_buttons .menubar .lastItem,
-    .cal_buttons .menubar .todayButton {
-        border-right: none;
-    }
-    .cal_buttons .menubar .todayButton a {
-        border: 1px solid #bcc2c7;
-        border-radius: 5px;
-        -moz-border-radius: 5px;
-        margin-right: 5px;
-    }
-    .cal_buttons .menubar a.disabled,
-    .cal_buttons .menubar a.disabled:hover,
-    .cal_buttons .menubar a.disabled:active {
-        color: #B4B4B4;
-        cursor: default;
-        background-color: #F6F7F6;
-    }
-    .cal_buttons .previous span,
-    .cal_buttons .next span {
-        border-bottom: 5px solid transparent;
-        border-top: 5px solid transparent;
-        display: inline-block;
-        font-size:0;
-        height: 0;
-        position: relative;
-        top: 3px;
-        line-height: 14px;
-    }
-    .cal_buttons .previous span {
-        border-right: 9px solid #3A74A9;
-    }
-    .cal_buttons .next span {
-        border-left: 9px solid #3A74A9;
-    }
-    .cal_buttons .disabled .previous span {
-        border-right: 9px solid #B4B4B4;
-    }
-    .cal_buttons .disabled .next span {
-        border-left: 9px solid #B4B4B4;
-    }
 
 
     /** =CALENDAR COLORS
@@ -1180,29 +1087,57 @@
 
 .cal-toolbar {
     .clearfix();
+    border: 0;
+    padding: 5px 9px;
+    .dropdown-menu a, .dropdown-menu a:visited {
+        color: @linkColor;
+        &:hover {
+            text-decoration: none;
+    	    color: lighten(@baseColor2, 10%);
+    	}
+    }
+    .calendar-dropdown (@width) {
+        .dropdown-toggle {
+            width: @width;
+        }
+        .dropdown-menu {
+            width: @width - 2px;
+            min-width: 0;
+        }
+    }
+
+    .b-today {
+        float: left;
+    }
     .c-navigate {
+        float: left;
         margin-left: 10px;
+    }
+    .c-date {
+        float: left;
+        margin-left: 10px;
+        .dropdown {
+            float: left;
+        }
+        .d-selyear {
+            .calendar-dropdown(64px);
+        }
+        .d-selmonth {
+            .calendar-dropdown(65px);
+        }
+        .d-selday {
+            .calendar-dropdown(50px);
+        }
     }
     .c-viewtype {
         float: right;
         margin-left: 8px;
     }
     .c-term {
-        margin-left: 12px;
         float: right;
+        margin-left: 12px;
     }
-    .karl-calendar-dropdown-year {
-        margin-left: 24px;
-        width: 64px;
-    }
-    .karl-calendar-dropdown-month {
-        margin-left: 4px;
-        width: 57px;
-    }
-    .karl-calendar-dropdown-day {
-        margin-left: 4px;
-        width: 50px;
-    }
+
 }
 
 
