ux2 calendar: toolbar small fix

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -43,10 +43,10 @@
     .cal_choose a {
       font-size: 90%;
     }
-    .cal_choose cal_label {
-      padding-bottom: 2px;
+    .cal_choose label {
       font-size: 100%;
       font-weight: normal;
+      display: inline-block;
     }
     .cal_choose select {
       margin-top: 2px;
