Fixed problem with members-info being displayed at bottom, currently hides it

--- a/karl/views/static/ux2/css/responsive/1024.less
+++ b/karl/views/static/ux2/css/responsive/1024.less
@@ -97,6 +97,7 @@
         clear: none;
         float: right;
         width: auto;
+        display: block;
         padding: 0 (@space * 1em)/2;
         a {
             color: #bbb;
