--- a/karl/views/static/ux2/css/responsive/640.less
+++ b/karl/views/static/ux2/css/responsive/640.less
@@ -226,4 +226,7 @@ section.main .vcard .adr {
 section.main .vcard aside {
     text-align: right;
 }
+#members-info {
+    display: none;
+}     
 }
