--- a/karl/views/static/ux2/css/responsive/320.less
+++ b/karl/views/static/ux2/css/responsive/320.less
@@ -32,5 +32,8 @@
 	    padding: 0 (@space * 1em)/2;
 	    border-bottom: none;
 	}
+    #members-info {
+        display: none;
+    }     
     /* @end */
 }
