--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -29,6 +29,12 @@
         .cal-header-or-footer();
         padding: 8px 0 0;
         .border-radius (6px 6px 0 0);
+
+        .d-layerpicker {
+            margin: 0 8px;
+            display: inline-block;
+        }
+
     }
 
     .cal-footer {
